--- a/rm-portfolio/package.json
+++ b/rm-portfolio/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rm-portfolio",
   "version": "0.1.0",
+  "homepage": "http://rdmullins.github.io/rm-portfolio-frontend",
   "private": true,
   "dependencies": {
     "axios": "^1.2.1",
@@ -12,6 +13,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
